--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,128 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  font-family: sans-serif;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--secondary) var(--primary);
 }
-a:hover {
-  color: #535bf2;
+*::-webkit-scrollbar {
+  width: 15px;
+}
+
+*::-webkit-scrollbar-track {
+  background: var(--primary);
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--secondary);
+  border-radius: 14px;
+  border: 3px solid var(--primary);
 }
 
 body {
   margin: 0;
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: white;
+  color: #777;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: center;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+/* p{
+  font-weight: 200;
+  font-size: 14px;
+} */
+.app {
+  width: 90vw;
+  height: 90vh;
+  max-height: 95vh;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.image-container {
+  display: flex;
+  justify-content: center;
+  background-color: rgba(x, y, z, 0.2);
+  backdrop-filter: blur(20px);
+}
+
+.image-container .image {
+  /* max-height:80%; */
+}
+
+.input-container {
+  width: 100%;
+  display: flex;
+  border-radius: 6px;
+  overflow: hidden;
+  box-shadow: rgba(0, 0, 82, 0.15) 0 2px 4px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
+}
+
+.input-container input {
+  border: none;
+  padding: 8px 10px;
+  box-sizing: border-box;
+  font-size: 16px;
+  outline: none;
+  width: 90%;
+  font-weight: 400;
+  color: rgb(40, 35, 35);
+  font-family: sans-serif;
+}
+.cross {
+  box-sizing: border-box;
+}
+
+.imageInput {
+  border: none;
+  padding: 8px 10px;
+  box-sizing: border-box;
+  font-size: 16px;
+  outline: none;
+  width: 100%;
+  font-weight: 200;
+  color: #7777;
+}
+
+.input-container input::placeholder {
+  color: #7777;
+  font-weight: 300;
+}
+
+.input-container button {
+  min-width: 12%;
+  border: none;
+  padding-left: 5px;
+  border-left: 1px #cacaca solid;
+  background-color: #ffff;
+  color: #5b5b5b;
+  font-weight: bold;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.input-container button:active {
+  background-color: #cacaca;
+}
+
+.answer {
+  box-shadow: rgba(0, 0, 82, 0.15) 0 2px 4px;
+  padding: 13px 14px;
+  box-sizing: border-box;
+  color: #121212;
+  border-radius: 6px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
 }
